ClassDiagramTest-Example adjusted